--- a/clockesp/clockesp.ipynb
+++ b/clockesp/clockesp.ipynb
@@ -6,7 +6,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "%serialconnect to --port=/dev/ttyUSB0"
+                "%serialconnect to --port=/dev/ttyUSB1"
             ]
         },
         {
@@ -19,6 +19,7 @@
                 "import time\n",
                 "#import utime\n",
                 "from machine import Pin, SPI, RTC\n",
+                "import ntptime\n",
                 "#import uasyncio as asyncio\n",
                 "from utime import sleep_ms, ticks_ms, ticks_diff\n",
                 "#import urtc\n",
@@ -89,6 +90,7 @@
                 "        maxTransfer(8-2*i, lo)                        \n",
                 " \n",
                 "#set_display([19, None, 85, 76])\n",
+                "set_display([None, None, None, None])\n",
                 "\n",
                 "#def write_digit(pos, digit, dp = False):\n",
                 "#    maxTransfer()\n",
@@ -250,22 +252,90 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def update_ntp():\n",
-                "    import network, ntptime\n",
+                "# watchdog functions\n",
+                "import machine\n",
+                "dog_started = False\n",
+                "dog_start_time = None\n",
+                "killed=False\n",
+                "def _killer():\n",
+                "    #print('*',)\n",
+                "    global dog_started, dog_start_time, killed\n",
+                "    #killed = True\n",
+                "    if not dog_started: return\n",
+                "    if ticks_diff(ticks_ms(), dog_start_time) > 10000:\n",
+                "        machine.reset() # too long. Just kill the whole MCU\n",
+                "        killed = True\n",
+                "        #print(\"You're terminated!\")\n",
+                "    \n",
+                "def killer(dog): _killer()\n",
+                "def start_killer():\n",
+                "    global dog_started, dog_start_time, killed\n",
+                "    state = machine.disable_irq()\n",
+                "    dog_started = True\n",
+                "    dog_start_time = ticks_ms()\n",
+                "    killed = False\n",
+                "    machine.enable_irq(state)\n",
+                "    \n",
+                "def stop_killer():\n",
+                "    global dog_started, dog_start_time, killed\n",
+                "    state = machine.disable_irq()\n",
+                "    dog_started = False\n",
+                "    dog_start_time = None\n",
+                "    killed = False\n",
+                "    machine.enable_irq(state)\n",
+                "\n",
+                "  \n",
+                "# ensure the dog is set up only once, otherwise we'll get an OSError 261\n",
+                "activate_dog = not ('dog' in locals())\n",
+                "#activate_dog = False\n",
+                "if activate_dog:\n",
+                "    dog = machine.Timer(0)\n",
+                "    dog.init(period = 1000, mode=machine.Timer.PERIODIC, callback = killer)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 10,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "sta = None"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def do_connect(delay_ms = 100):\n",
+                "    import network\n",
                 "    import settings\n",
                 "    show_status(401)\n",
-                "    sta_if = network.WLAN(network.STA_IF)\n",
-                "    if not sta_if.isconnected():\n",
+                "    start_killer()\n",
+                "    sta = network.WLAN(network.STA_IF)\n",
+                "    if not sta.isconnected():\n",
                 "        print('connecting to network...')\n",
-                "        sta_if.active(True)\n",
-                "        sta_if.connect(settings.wifi_essid, settings.wifi_password)\n",
-                "        while not sta_if.isconnected():\n",
-                "            sleep_ms(250)\n",
-                "            \n",
+                "        sta.active(True)\n",
+                "        sta.connect(settings.wifi_essid, settings.wifi_password)\n",
+                "        while not sta.isconnected():\n",
+                "            sleep_ms(delay_ms)\n",
+                "    stop_killer()\n",
+                "    return sta\n",
+                "\n",
+                "#if sta is not None:\n",
+                "#    sta = do_connect()\n",
+                "do_connect()\n",
+                "\n",
+                "def update_ntp():\n",
+                "    #import ntptime\n",
                 "    show_status(402)\n",
+                "    #start_killer()\n",
+                "    ntptime.host = '192.168.0.17'\n",
                 "    ntptime.settime()    \n",
-                "    sta_if.disconnect()\n",
-                "    sta_if.active(False)\n",
+                "    #sta_if.disconnect()\n",
+                "    #sta_if.active(False)\n",
+                "    #stop_killer()\n",
                 "    show_status(403)\n",
                 "    update_display()\n",
                 "#print(rtc.datetime())"
@@ -273,7 +343,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": null,
             "metadata": {},
             "outputs": [],
             "source": [
