--- a/clockesp/clockesp.ipynb
+++ b/clockesp/clockesp.ipynb
@@ -6,7 +6,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "%serialconnect to --port=/dev/ttyUSB1"
+                "%serialconnect to --port=/dev/ttyUSB0"
             ]
         },
         {
@@ -48,6 +48,18 @@
         {
             "cell_type": "code",
             "execution_count": 4,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# maybe put in boot mode\n",
+                "if(sw2.value() == 0):\n",
+                "    while True:\n",
+                "        sleep_ms(1000)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 5,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -102,7 +114,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 6,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -130,7 +142,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 6,
+            "execution_count": 7,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -163,7 +175,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 8,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -172,7 +184,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 9,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -248,7 +260,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -295,7 +307,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 11,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -304,7 +316,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 12,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -330,12 +342,12 @@
                 "def update_ntp():\n",
                 "    #import ntptime\n",
                 "    show_status(402)\n",
-                "    #start_killer()\n",
+                "    start_killer()\n",
                 "    ntptime.host = '192.168.0.17'\n",
                 "    ntptime.settime()    \n",
                 "    #sta_if.disconnect()\n",
                 "    #sta_if.active(False)\n",
-                "    #stop_killer()\n",
+                "    stop_killer()\n",
                 "    show_status(403)\n",
                 "    update_display()\n",
                 "#print(rtc.datetime())"
