--- a/clockesp/clockesp.ipynb
+++ b/clockesp/clockesp.ipynb
@@ -15,18 +15,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "#import machine\n",
+                "import machine\n",
                 "import time\n",
-                "#import utime\n",
                 "from machine import Pin, SPI, RTC\n",
                 "import ntptime\n",
-                "#import uasyncio as asyncio\n",
                 "from utime import sleep_ms, ticks_ms, ticks_diff\n",
-                "#import urtc\n",
+                "import machine\n",
+                "import socket\n",
                 "\n",
                 "import mel\n",
-                "from mel import adjustBST\n",
-                "#import settings # personal settings which contain Wifi info"
+                "#from mel import adjustBST"
             ]
         },
         {
@@ -190,8 +188,8 @@
             "source": [
                 "def display_time():\n",
                 "    yr , imonth, iday, _ , hr, mint, _, _ = rtc.datetime()\n",
-                "    #print(mint)\n",
-                "    imonth, iday, hr = mel.adjustBST(yr, imonth, iday, hr)\n",
+                "    #imonth, iday, hr = mel.adjustBST(yr, imonth, iday, hr)\n",
+                "    #set_display([iday, None, hr, mint])\n",
                 "    set_display([iday, None, hr, mint])\n",
                 "\n",
                 "timing = False\n",
@@ -339,18 +337,30 @@
                 "#    sta = do_connect()\n",
                 "do_connect()\n",
                 "\n",
+                "\n",
+                "def use_local():\n",
+                "    try:\n",
+                "        s = socket.socket()\n",
+                "        addr = socket.getaddrinfo(\"192.168.0.17\", 1762)[0][-1]\n",
+                "        s.connect(addr)\n",
+                "        data = s.recv(100)\n",
+                "    finally:\n",
+                "        s.close()\n",
+                "    \n",
+                "    fields = data.decode().split(\" \")\n",
+                "    fields = tuple(map(int, fields))\n",
+                "    rtc = machine.RTC()\n",
+                "    rtc.datetime(fields)\n",
+                "\n",
                 "def update_ntp():\n",
-                "    #import ntptime\n",
                 "    show_status(402)\n",
                 "    start_killer()\n",
-                "    ntptime.host = '192.168.0.17'\n",
-                "    ntptime.settime()    \n",
-                "    #sta_if.disconnect()\n",
-                "    #sta_if.active(False)\n",
+                "    #ntptime.host = '192.168.0.17'\n",
+                "    #ntptime.settime()\n",
+                "    use_local()    \n",
                 "    stop_killer()\n",
                 "    show_status(403)\n",
-                "    update_display()\n",
-                "#print(rtc.datetime())"
+                "    update_display()\n"
             ]
         },
         {
