--- a/clockesp/clockesp.ipynb
+++ b/clockesp/clockesp.ipynb
@@ -251,6 +251,7 @@
                 "                 delay_ms = 20)    \n",
                 "\n",
                 "def update_heartbeat():\n",
+                "    return # turn it off for now\n",
                 "    heart.off()\n",
                 "    utime.sleep_ms(10)\n",
                 "    heart.on()"
@@ -365,7 +366,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
             "outputs": [],
             "source": [
