--- a/clockesp/clockesp.ipynb
+++ b/clockesp/clockesp.ipynb
@@ -36,7 +36,6 @@
                 "heart = Pin(16, Pin.OUT) # D0, but internal LED\n",
                 "heart.on() # counterintuively, for the internal LED, ON means OFF\n",
                 "sw1 = Pin(4, Pin.IN, Pin.PULL_UP) # D2\n",
-                "sw2 = Pin(5, Pin.IN, Pin.PULL_UP) # D1\n",
                 "buzzer = Pin(0, Pin.OUT) # D3\n",
                 "buzzer.off()\n",
                 "cs_pin = Pin(15, Pin.OUT) # aka SS slave select, D8\n",
@@ -49,10 +48,12 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# maybe put in boot mode\n",
-                "if(sw2.value() == 0):\n",
-                "    while True:\n",
-                "        sleep_ms(1000)"
+                "# maybe put in programming mode\n",
+                "sw2 = Pin(5, Pin.IN, Pin.PULL_UP) # D1 # right switch\n",
+                "normal_mode = (sw2.value() != 0)\n",
+                "#if(sw2.value() == 0):\n",
+                "#    while True:\n",
+                "#        sleep_ms(1000)"
             ]
         },
         {
@@ -125,8 +126,8 @@
                 "        \n",
                 "    def rising(self):\n",
                 "        now =utime.ticks_ms()\n",
-                "        if now<self.start: self.start = now\n",
-                "        if now - self.start < self.interval_ms: return False\n",
+                "        #if now<self.start: self.start = now\n",
+                "        if ticks_diff(now, self.start) < self.interval_ms: return False\n",
                 "        self.start = now\n",
                 "        return True\n",
                 "    \n",
@@ -188,18 +189,12 @@
             "source": [
                 "def display_time():\n",
                 "    yr , imonth, iday, _ , hr, mint, _, _ = rtc.datetime()\n",
-                "    #imonth, iday, hr = mel.adjustBST(yr, imonth, iday, hr)\n",
-                "    #set_display([iday, None, hr, mint])\n",
                 "    set_display([iday, None, hr, mint])\n",
                 "\n",
                 "timing = False\n",
                 "timer_start = None\n",
                 "\n",
-                "def change_major_mode():\n",
-                "    global timing, timer_start\n",
-                "    timing = not timing;\n",
-                "    if timing:\n",
-                "        timer_start = ticks_ms()\n",
+                "\n",
                 "\n",
                 "def elapsed_time():\n",
                 "    global timer_start\n",
@@ -236,11 +231,13 @@
                 "    else:\n",
                 "        display_time()\n",
                 "\n",
-                "\n",
-                "\n",
                 "def button_pressed(pauser):\n",
-                "    #print('Button pressed')\n",
-                "    change_major_mode()\n",
+                "    #print('Button pressed')    \n",
+                "    #change_major_mode()\n",
+                "    global timing, timer_start\n",
+                "    timing = not timing;\n",
+                "    if timing:\n",
+                "        timer_start = ticks_ms()        \n",
                 "    pauser.pause(button_released, condition = lambda: sw1.value() == 1, \n",
                 "                 delay_ms = 20)\n",
                 "    \n",
@@ -334,9 +331,8 @@
                 "    stop_killer()\n",
                 "    return sta\n",
                 "\n",
-                "#if sta is not None:\n",
-                "#    sta = do_connect()\n",
-                "do_connect()\n",
+                "\n",
+                "#do_connect()\n",
                 "\n",
                 "\n",
                 "def use_local():\n",
@@ -389,7 +385,7 @@
                 "        ev_buzzer.update()\n",
                 "        ev_display.update()\n",
                 "        ev_heartbeat.update()\n",
-                "loop()    "
+                "#loop()    "
             ]
         },
         {
@@ -397,7 +393,13 @@
             "execution_count": null,
             "metadata": {},
             "outputs": [],
-            "source": []
+            "source": [
+                "if normal_mode:\n",
+                "    do_connect()\n",
+                "    loop()\n",
+                "else:\n",
+                "    show_status(404)"
+            ]
         }
     ],
     "metadata": {
